integrated some of the DB changes. Currently using dummy objects to show and modify ideator and creator profiles.